force-app/main/default/objects/DepositAccount__c/fields/accnumber__c.field-meta.xml
<CustomField>
    <fullName>accnumber__c</fullName>
    <description>Stores the auto generated account number for the deposit account.</description>
    <displayFormat>DA#{00000000}</displayFormat>
    <inlineHelpText>Auto-generated account number.</inlineHelpText>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>