force-app/main/default/objects/DepositAccount__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>Stores the amount the deposit account has.</description>
    <inlineHelpText>Amount in the deposit account.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>