force-app/main/default/objects/DepositAccount__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <formula>IF(
    ROUND((NOW()-CreatedDate)/365,2) &lt; 1,
    IMAGE(&quot;/img/samples/color_red.gif&quot;, &apos;RED&apos;, 30, 30),
    IF(
        ROUND((NOW()-CreatedDate)/365,2) &lt; 2,
        IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &apos;YELLOW&apos;, 30, 30),
        IMAGE(&quot;/img/samples/color_green.gif&quot;, &apos;GREEN&apos;, 30, 30)) 
)</formula>
    <label>Code</label>
    <type>Text</type>
</CustomField>