force-app/main/default/objects/DepositAccount__c/validationRules/DepositAccount_Amount_NoDecrease.validationRule-meta.xml
<ValidationRule>
    <fullName>DepositAccount_Amount_NoDecrease</fullName>
    <active>true</active>
    <errorConditionFormula>amount__c &lt; PRIORVALUE(amount__c)</errorConditionFormula>
    <errorDisplayField>amount__c</errorDisplayField>
    <errorMessage>DEP-409-VR-AMT-NODEC – Amount cannot be decreased.</errorMessage>
</ValidationRule>