force-app/main/default/objects/DepositAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>accnumber__c</columns>
    <columns>amount__c</columns>
    <columns>bankId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>