force-app/main/default/objects/DepositAccount__c/listViews/DepositAccounts.listView-meta.xml
<ListView>
    <fullName>DepositAccounts</fullName>
    <columns>NAME</columns>
    <columns>amount__c</columns>
    <columns>bankId__c</columns>
    <filterScope>Mine</filterScope>
    <label>Deposit Accounts</label>
</ListView>